<resources>
    <string name="app_name">Clothing Store</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Re-enter Password</string>
    <string name="toSignInPage">Already an user? Sign In</string>
    <string name="toSignUpPage">Don\'t have account? Sign Up</string>
    <string name="searchHintHomePage">Search your item here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="goToHome"><u>Go to homepage</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_receiver">Receiver\'s information</string>
    <string name="edit"><u>Edit</u>.</string>
    <string name="choose"><u>Choose</u>.</string>
</resources>
