<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/pink_border"
            android:orientation="vertical"
            android:padding="@dimen/basex3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/largeFont"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_signin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sizex5"
                android:layout_marginTop="@dimen/basex4"
                android:autofillHints="emailAddress"
                android:background="@drawable/pink_border"
                android:drawableStart="@drawable/ic_email_24"
                android:drawablePadding="@dimen/base"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/base" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_signin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sizex5"
                    android:layout_marginTop="@dimen/base"
                    android:autofillHints="password"
                    android:background="@drawable/pink_border"
                    android:drawableStart="@drawable/ic_password_24"
                    android:drawablePadding="@dimen/base"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/base"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/showHidePw_signin"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_marginRight="@dimen/base"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_eye_24"
                    app:layout_constraintBottom_toBottomOf="@id/password_signin"
                    app:layout_constraintEnd_toEndOf="@id/password_signin"
                    app:layout_constraintTop_toTopOf="@id/password_signin" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sizex6"
                android:layout_marginTop="@dimen/basex2"
                android:text="@string/sign_in"
                android:textSize="@dimen/normalFont"
                app:cornerRadius="@dimen/basex3" />

            <TextView
                android:id="@+id/signUpRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/base"
                android:text="@string/toSignUpPage"
                android:textSize="@dimen/normalFont"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>