<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Checkout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/pink"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:weightSum="3">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_chevron_left_24"
                android:paddingVertical="10dp"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Checkout"/>
            <ImageView

                android:paddingVertical="10dp"
                android:layout_weight="1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cart"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <TextView
                    android:layout_weight="1"
                    android:paddingVertical="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_receiver"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_edit"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:paddingVertical="2dp"
                    android:paddingRight="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textColor="@color/blue"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name: "
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="2dp"
                android:text=" "
                android:textColor="@color/black"
                android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone number: "
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="2dp"
                    android:text=" "
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address: "
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="2dp"
                    android:text=" "
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="Choose payment: "/>
                <Spinner
                    android:padding="5dp"
                    android:background="@drawable/border"
                    android:id="@+id/spinner_payment"
                    android:layout_width="250dp"
                    android:layout_height="31dp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_checkout"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:visibility="visible"
            />
        <LinearLayout
        android:visibility="gone"
            android:orientation="vertical"
            android:id="@+id/tv_empty"
            android:layout_width="match_parent"
            android:layout_height="630dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Empty Cart"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/go_to_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goToHome"
                android:textColor="@color/blue"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/basex3"
            android:layout_weight="1"
            android:paddingVertical="5dp"

            android:background="@color/pink"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Total:"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_total_cart"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="0"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="Confirm"
                android:id="@+id/btn_confirm"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>